src/test/ui/issues/issue-66667-function-cmp-cycle.stderr
error[E0369]: binary operation `==` cannot be applied to type `[fn item {second}: fn()]`
  --> $DIR/issue-66667-function-cmp-cycle.rs:2:12
   |
LL |     second == 1
   |     ------ ^^ - {integer}
   |     |
   |     [fn item {second}: fn()]

error[E0308]: mismatched types
  --> $DIR/issue-66667-function-cmp-cycle.rs:2:15
   |
LL |     second == 1
   |               ^ expected fn item, found integer
   |
   = note: expected fn item `[fn item {second}: fn()]`
                 found type `{integer}`

error[E0369]: binary operation `==` cannot be applied to type `[fn item {first}: fn()]`
  --> $DIR/issue-66667-function-cmp-cycle.rs:7:11
   |
LL |     first == 1
   |     ----- ^^ - {integer}
   |     |
   |     [fn item {first}: fn()]

error[E0308]: mismatched types
  --> $DIR/issue-66667-function-cmp-cycle.rs:7:14
   |
LL |     first == 1
   |              ^ expected fn item, found integer
   |
   = note: expected fn item `[fn item {first}: fn()]`
                 found type `{integer}`

error[E0369]: binary operation `==` cannot be applied to type `[fn item {bar}: fn()]`
  --> $DIR/issue-66667-function-cmp-cycle.rs:12:9
   |
LL |     bar == 1
   |     --- ^^ - {integer}
   |     |
   |     [fn item {bar}: fn()]

error[E0308]: mismatched types
  --> $DIR/issue-66667-function-cmp-cycle.rs:12:12
   |
LL |     bar == 1
   |            ^ expected fn item, found integer
   |
   = note: expected fn item `[fn item {bar}: fn()]`
                 found type `{integer}`

error: aborting due to 6 previous errors

Some errors have detailed explanations: E0308, E0369.
For more information about an error, try `rustc --explain E0308`.
